# seabored

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: BENCHMARKS.md  perf.rs  perf_divan.rs  perf_instr.rs
benches/datasets/: log.rs  mesh.rs  mimi_content_multipart_3.rs  minecraft_savedata.rs  mk48.rs  mod.rs
benches/datasets/cbor/: log.cbor  minecraft_savedata.cbor
fuzz/: Cargo.toml
fuzz/fuzz_targets/: serde.rs  value.rs
src/: de.rs  error.rs  ib.rs  lib.rs  mt.rs  ser.rs  serde.rs  types.rs
src/io/: read.rs  write.rs
src/serde/: serde_de.rs  serde_ser.rs
src/types/: float.rs  integer.rs  raw.rs  seq.rs
tests/: rfc8949_appendix.rs
