[package]
name = "seabored-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.seabored]
path = ".."
features = ["serde"]

[[bin]]
name = "value"
path = "fuzz_targets/value.rs"
test = false
doc = false
bench = false


[[bin]]
name = "serde"
path = "fuzz_targets/serde.rs"
test = false
doc = false
bench = false
